Fix contact icon spacing

--- a/src/stylesheets/components/_contact.scss
+++ b/src/stylesheets/components/_contact.scss
@@ -9,6 +9,6 @@
   & > a {
     width: 24px;
     height: 24px;
-    margin-right: 20px;
+    margin: 0% 5%;
   }
 }
